# onecfg-rust

./: .gitignore  .prettierignore  Cargo.toml  LICENSE-APACHE  README.md  ci.sh  onecfg.json  run.sh  rustfmt.toml  schema.json
.github/workflows/: ci.yml
example/: editorconfig.json  eslint.json  git.json  jest.json  onecfg-editorconfig.json  onecfg-jest.json  onecfg-node.json  onecfg-prettier.json  onecfg-swc.json  onecfg-typescript-eslint.json  onecfg-typescript.json  onecfg-vscode.json  preact.json  prettier.json  react.json  rust-analyzer.json  rust.json  rustfmt.json  swc.json  typescript.emit.json  typescript.eslint.json  typescript.json  vscode.json
src/onecfg/: config.rs  ignorefile.rs  json.rs  lib.rs  path.rs  text.rs
test/inheritance/: onecfg-a.json  onecfg-aa.json  onecfg-ab.json  onecfg-b.json  onecfg-ba.json  onecfg-bb.json  onecfg.json
