[package]
name = "onecfg"
version = "0.7.0"
authors = ["Clemens Akens"]
edition = "2021"
description = "One config file to generate them all."
readme = "README.md"
homepage = "https://github.com/clebert/onecfg-rust"
repository = "https://github.com/clebert/onecfg-rust"
license = "MIT OR Apache-2.0"
keywords = ["cli", "json", "config", "generator"]
categories = ["command-line-utilities"]
include = ["src/**/*.rs", "Cargo.toml", "LICENSE-*"]

[lib]
name = "onecfg"
path = "src/onecfg/lib.rs"

[[bin]]
name = "onecfg"
test = false
doc = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive", "wrap_help"] }
indexmap = { version = "1.9", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
toml = "0.6"
